--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "gulp-clean-css": "~2.0.9",
     "gulp-htmlmin": "~2.0.0",
     "gulp-notify": "~2.2.0",
+    "gulp-plumber": "^1.1.0",
     "gulp-rename": "~1.2.2",
     "gulp-sass": "~2.3.1"
   }
 }
-
