Add Pygments code highlighting

--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,5 @@
 baseurl = "https://taravancil.github.io"
 title = "Tara Vancil"
 pluralizelisttitles = false
+pygmentsstyle = "monokai"
+pygmentscodefences = true
