--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "",
+  "description": "",
   "devDependencies": {
     "es6-promise": "^3.2.1",
     "gulp": "~3.9.1",
@@ -9,5 +11,9 @@
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "~1.2.2",
     "gulp-sass": "~2.3.1"
-  }
+  },
+  "scripts": {
+    "start": "gulp"
+  },
+  "author": "Tara Vancil <tbvanc@gmail.com>"
 }
