--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "gulp-notify": "~2.2.0",
     "gulp-plumber": "^1.1.0",
     "gulp-rename": "~1.2.2",
-    "gulp-sass": "~2.3.1"
+    "gulp-sass": "~2.3.1",
+    "gulp-uglify": "^3.0.0",
+    "pump": "^1.0.2"
   },
   "scripts": {
     "start": "gulp"
