--- a/data/projects/beaker.yml
+++ b/data/projects/beaker.yml
@@ -1,23 +1,17 @@
-title: 'Beaker'
+title: Beaker
 id: beaker
 summary:
-  'Beaker is an experimental peer-to-peer browser built with Electron. Beaker
-   implements <a href="https://github.com/datproject/dat">Dat</a>, a
-   BitTorrent-style protocol for syncing and sharing files on a peer-to-peer
-   network.'
-description:
-  'Beaker is an experimental peer-to-peer browser built with Electron. Beaker
-   implements [Dat](https://datproject.org)</a>, a
-   BitTorrent-style protocol for syncing and sharing files on a peer-to-peer
-   network.
+  An experimental peer-to-peer browser built with Electron.
+description: |
+  Beaker is an experimental peer-to-peer browser built with Electron. Beaker
+  implements [Dat](https://datproject.org)</a>, a
+  BitTorrent-style protocol for syncing and sharing files on a peer-to-peer
+  network.
 
-   With tools for staging and reviewing a project’s changes, viewing a websites
-   at any point in its version history, and secretly sharing files without
-   using a third-party service, Beaker aims to be a powerful toolset for
-   publishing files and websites on the peer-to-peer Web.
-
-   I’m responsible for implementing interfaces that clearly communicate
-   novel Web browser actions.'
+  With tools for staging and reviewing a project’s changes, viewing a websites
+  at any point in its version history, and secretly sharing files without
+  using a third-party service, Beaker aims to be a powerful toolset for
+  publishing files and websites on the peer-to-peer Web.
 screenshots:
   - beaker
   - beaker2
