Add description for nippler

--- a/data/projects/nippler.yml
+++ b/data/projects/nippler.yml
@@ -3,7 +3,7 @@ id: nippler
 summary:
   A satirical tool for replacing female nipples in photos.
 description:
-  ''
+  A satirical tool for replacing female nipples in photos.
 screenshots:
   - nippler
   - nippler2
