Update AustinJS and OpenAustin links

--- a/data/talks/open-austin.yaml
+++ b/data/talks/open-austin.yaml
@@ -2,5 +2,5 @@ event: Open Austin
 title: The peer-to-peer Web and open data
 date: July 17, 2017
 location: Austin, TX
-link: https://www.open-austin.org/events/
+link: https://www.meetup.com/Open-Austin/events/236698279/
 weight: 1
