Add new books to reading list

--- a/data/books/current.yml
+++ b/data/books/current.yml
@@ -1,7 +1,7 @@
 books:
-  - title: The Alzheimer's Antidote
-    author: Amy Berger
-    link: https://www.amazon.com/gp/product/1603587098/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1603587098&linkCode=as2&tag=taravancil-20&linkId=2940529bdb67a736e1e6995cccb3169f
-  - title: Burning Chrome
-    author: William Gibson
-    link: https://www.amazon.com/gp/product/0060539828/ref=as_li_tl?ie=UTF8&tag=taravancil-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=0060539828&linkId=a275b4e36024c634cd8390978cc81131
+  - title: IBM and the Holocaust
+    author: Edwin Black
+    link: https://www.amazon.com/gp/product/0609607995/ref=as_li_tl?ie=UTF8&tag=taravancil-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=0609607995&linkId=b1c3c8ac853b0c9c2026395dae662ef9
+  - title: Harry Potter and the Cursed Child
+    author: John Tiffany, Jack Thorne
+    link: https://www.amazon.com/gp/product/1338099132/ref=as_li_tl?ie=UTF8&tag=taravancil-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1338099132&linkId=8d50479ea0da3f60260bbc60a881c068
