--- a/data/books/twentyseventeen.yml
+++ b/data/books/twentyseventeen.yml
@@ -1,4 +1,7 @@
 books:
+  - title: The Alzheimer's Antidote
+    author: Amy Berger
+    link: https://www.amazon.com/gp/product/1603587098/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1603587098&linkCode=as2&tag=taravancil-20&linkId=2940529bdb67a736e1e6995cccb3169f
   - title: The Food Lab
     author: J. Kenji López-Alt
     link: https://www.amazon.com/gp/product/1133607160/ref=as_li_tl?ie=UTF8&tag=taravancil-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1133607160&linkId=6301227483499f43667b738186658fd4
