--- a/data/books/twentyseventeen.yml
+++ b/data/books/twentyseventeen.yml
@@ -1,4 +1,7 @@
 books:
+  - title: Harry Potter and the Cursed Child
+    author: John Tiffany, Jack Thorne
+    link: https://www.amazon.com/gp/product/1338099132/ref=as_li_tl?ie=UTF8&tag=taravancil-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1338099132&linkId=8d50479ea0da3f60260bbc60a881c068
   - title: The Alzheimer's Antidote
     author: Amy Berger
     link: https://www.amazon.com/gp/product/1603587098/ref=as_li_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=1603587098&linkCode=as2&tag=taravancil-20&linkId=2940529bdb67a736e1e6995cccb3169f
