--- a/data/books/twentyseventeen.yml
+++ b/data/books/twentyseventeen.yml
@@ -1,4 +1,7 @@
 books:
+  - title: Flash Boys
+    author: Michael Lewis
+    link: https://www.amazon.com/gp/product/0393351599/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&tag=taravancil-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=0393351599&linkId=7a99e874ba88eaf17adb04f9682140f5
   - title: Harry Potter and the Cursed Child
     author: John Tiffany, Jack Thorne
     link: https://www.amazon.com/gp/product/1338099132/ref=as_li_tl?ie=UTF8&tag=taravancil-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1338099132&linkId=8d50479ea0da3f60260bbc60a881c068
