--- a/data/books/current.yml
+++ b/data/books/current.yml
@@ -1,4 +1,7 @@
 books:
+  - title: Fantastic Beasts and Where to Find Them
+    author: J.K. Rowling
+    link: https://www.amazon.com/gp/product/1338109065/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&tag=taravancil-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1338109065&linkId=690e361bae7b83611a10bcc541bdef41
   - title: IBM and the Holocaust
     author: Edwin Black
     link: https://www.amazon.com/gp/product/0609607995/ref=as_li_tl?ie=UTF8&tag=taravancil-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=0609607995&linkId=b1c3c8ac853b0c9c2026395dae662ef9
