--- a/data/books/twentyseventeen.yml
+++ b/data/books/twentyseventeen.yml
@@ -1,4 +1,8 @@
 books:
+  - title: I Am Legend
+    author: Richard Matheson
+    link: https://www.amazon.com/gp/product/0765357151/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&tag=taravancil-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=0765357151&linkId=249c96e54ac3df857dd92253bbeb306c
+    recommend: true
   - title: Flash Boys
     author: Michael Lewis
     link: https://www.amazon.com/gp/product/0393351599/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&tag=taravancil-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=0393351599&linkId=7a99e874ba88eaf17adb04f9682140f5
