Add gravity to bookshelf

--- a/data/books/current.yml
+++ b/data/books/current.yml
@@ -1,4 +1,7 @@
 books:
+  - title: Gravity
+    author: Tess Gerritsen
+    link: https://www.amazon.com/gp/product/0671016776/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&tag=taravancil-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=0671016776&linkId=a9129a9e970f903bfcf89224e69dd066
   - title: "Feudal Society Volume 1: The Growth of Ties of Dependence"
     author: Marc Bloch
     link: https://www.amazon.com/gp/product/B00CR40R0A/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&tag=taravancil-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=B00CR40R0A&linkId=a02e76c2a50242bfc65b3d6c5af11843
