--- a/data/books/twentyeighteen.yaml
+++ b/data/books/twentyeighteen.yaml
@@ -1,10 +1,14 @@
 books:
-  - title: Gravity
-    author: Tess Gerritsen
-    link: https://www.amazon.com/gp/product/0671016776/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&tag=taravancil-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=0671016776&linkId=a9129a9e970f903bfcf89224e69dd066
-  - title: HAM Radio Operator's Guide
-    author: Carl Bergquist (KG4AIC)
-    link: https://www.amazon.com/gp/product/0790612380/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&tag=taravancil-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=0790612380&linkId=85b844166ceb4b81c3ac1b99d39360a9
   - title: 100 Ideas that Changed the Web
     author: Jim Boulton
     link: https://www.amazon.com/gp/product/1780673701/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&tag=taravancil-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=1780673701&linkId=66629b4cac1ef697318d35d9f2e7d603
+  - title: HAM Radio Operator's Guide
+    author: Carl Bergquist (KG4AIC)
+    link: https://www.amazon.com/gp/product/0790612380/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&tag=taravancil-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=0790612380&linkId=85b844166ceb4b81c3ac1b99d39360a9
+  - title: Gravity
+    author: Tess Gerritsen
+    link: https://www.amazon.com/gp/product/0671016776/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&tag=taravancil-20&camp=1789&creative=9325&linkCode=as2&creativeASIN=0671016776&linkId=a9129a9e970f903bfcf89224e69dd066
+  - title: "The Attention Merchants: The Epic Scramble to Get Inside Our Heads"
+    author: Tim Wu
+    link: https://www.amazon.com/gp/product/0804170045/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=taravancil-20&creative=9325&linkCode=as2&creativeASIN=0804170045&linkId=dfe6345aaf8b5ae9a4e080034deb03da
+    recommend: true
