Update currently reading list

--- a/data/books/twentyeighteen.yaml
+++ b/data/books/twentyeighteen.yaml
@@ -29,3 +29,6 @@ books:
     author: J.K. Rowling
     link: https://www.amazon.com/gp/product/031620689X/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=taravancil-20&creative=9325&linkCode=as2&creativeASIN=031620689X&linkId=848330609518452541be59f2291230c0
     recommend: true
+  - title: Career of Evil
+    author: J.K. Rowling
+    link: https://www.amazon.com/gp/product/0316349895/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=taravancil-20&creative=9325&linkCode=as2&creativeASIN=0316349895&linkId=64b9899edc92158fccb728a07bb652be
