Finish reading Emma

--- a/data/books/twentyeighteen.yaml
+++ b/data/books/twentyeighteen.yaml
@@ -32,3 +32,6 @@ books:
   - title: Career of Evil
     author: J.K. Rowling
     link: https://www.amazon.com/gp/product/0316349895/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=taravancil-20&creative=9325&linkCode=as2&creativeASIN=0316349895&linkId=64b9899edc92158fccb728a07bb652be
+  - title: Emma
+    author: Jane Austen
+    link: https://www.amazon.com/gp/product/1853260282/ref=as_li_qf_asin_il_tl?ie=UTF8&tag=taravancil-20&creative=9325&linkCode=as2&creativeASIN=1853260282&linkId=a614099236a68a9fb0a6e18e07f44381
