--- a/data/talks/austinjsmay2017.yml
+++ b/data/talks/austinjsmay2017.yml
@@ -1,6 +1,5 @@
 event: 'Austin JS'
 title: 'Verifiable, versioned, peer-to-peer websites'
-date: June 20, 2017
+date: 2017-06-20
 location: 'Austin, TX'
 link: http://austinjavascript.com/posts/meetups/2017/06/20/
-weight: 6
