--- a/data/talks/open-austin.yaml
+++ b/data/talks/open-austin.yaml
@@ -1,6 +1,5 @@
 event: Open Austin
 title: The peer-to-peer Web and open data
-date: July 17, 2017
+date: 2017-07-17
 location: Austin, TX
 link: https://www.meetup.com/Open-Austin/events/236698279/
-weight: 5
