--- a/data/talks/p2pwebla2017.yaml
+++ b/data/talks/p2pwebla2017.yaml
@@ -1,8 +1,10 @@
-event: Peer-to-peer Web Los Angeles
-title: A brief history of the Web and how one architectural choice got us into a very big mess
-date: December 10, 2017
+event: Peer-to-peer Web / Los Angeles
+title: A brief history of the Web
+description: ...and how one architectural choice got us into a very big mess
+date: 2017-12-10
 location: Los Angeles, CA
-link: https://peer-to-peer-web.com
-weight: 1
+link: https://peer-to-peer-web.com/los-angeles/2017-12-10
 slides: /slides/p2p-web-day-la.pdf
-video: https://peer-to-peer-web.com/los-angeles
+recording: https://peer-to-peer-web.com/los-angeles/2017-12-10
+type: talk
+thumbnail: /images/thumbnails/p2p-web-la.png
