--- a/data/talks/mozfest2017.yml
+++ b/data/talks/mozfest2017.yml
@@ -1,6 +1,6 @@
 event: MozFest
-title: 'Re-decentralizing the Web with a peer-to-peer browser'
+title: "Re-decentralizing the Web with a peer-to-peer browser"
 date: 2017-10-27
 location: London
 link: https://github.com/MozillaFoundation/mozfest-program-2017/issues/96
-thumbnail: /images/thumbnails/mozfest.png
+thumbnail: /images/speaking/mozfest.png
