--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "",
   "description": "",
   "devDependencies": {
-    "gulp": "~3.9.1",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "~3.1.0",
     "gulp-clean-css": "~2.0.9",
     "gulp-htmlmin": "~2.0.0",
     "gulp-notify": "~2.2.0",
-    "gulp-plumber": "^1.1.0",
-    "gulp-rename": "~1.2.2",
+    "gulp-plumber": "^1.2.0",
+    "gulp-rename": "^1.2.3",
     "gulp-sass": "~2.3.1",
-    "gulp-uglify": "^3.0.0",
-    "pump": "^1.0.2"
+    "gulp-uglify": "^3.0.1",
+    "pump": "^1.0.3"
   },
   "scripts": {
     "start": "gulp",
