add recording and thumbnail to CascadiaJS entry

--- a/data/talks/cascadiajs2018.yml
+++ b/data/talks/cascadiajs2018.yml
@@ -2,6 +2,8 @@ event: "CascadiaJS 2018"
 title: "Reclaiming the Web with peer-to-peer protocols"
 date: 2018-11-15
 location: "Seattle, WA"
-link: https://2018.cascadiajs.com
+link: https://2018.cascadiajs.com/speakers/tara-vancil
 slides: /slides/cascadia-js-2018.pdf
 type: talk
+thumbnail: /images/speaking/cascadiajs.jpg
+recording: https://www.youtube.com/watch?v=2Q9TlvqE9_Y
