add recording to NodeConf AR entry

--- a/data/talks/nodeconfar2018.yml
+++ b/data/talks/nodeconfar2018.yml
@@ -6,3 +6,4 @@ link: https://2018.nodeconf.com.ar/speakers.html
 slides: /slides/nodeconf-ar-2018.pdf
 thumbnail: /images/speaking/nodeconf-ar.jpg
 type: talk
+recording: https://www.youtube.com/watch?v=cA-hc3kPIkU
