--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "",
   "description": "",
   "devDependencies": {
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-autoprefixer": "~3.1.0",
-    "gulp-clean-css": "~2.0.9",
-    "gulp-htmlmin": "~2.0.0",
+    "gulp-clean-css": "^4.2.0",
+    "gulp-htmlmin": "^5.0.1",
     "gulp-notify": "~2.2.0",
-    "gulp-plumber": "^1.2.0",
-    "gulp-rename": "^1.2.3",
-    "gulp-sass": "~2.3.1",
-    "gulp-uglify": "^3.0.1",
+    "gulp-plumber": "^1.2.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^3.0.2",
     "pump": "^1.0.3"
   },
   "scripts": {
