add a filter to wishlist

--- a/data/wishlist.yml
+++ b/data/wishlist.yml
@@ -241,3 +241,13 @@
   buyTitle: Cocktail Kingdom
   price: 11
   image: /images/wishlist/julep-strainer.jpg
+- title: 3 In 1 Timer
+  buyLink: https://smile.amazon.com/gp/product/B0187ZH5QQ
+  buyTitle: Amazon
+  price: 14
+  image: /images/wishlist/timer.jpg
+- title: Wide Spatulas
+  buyLink: https://smile.amazon.com/gp/product/B079Q1J3WG
+  buyTitle: Amazon
+  price: 52
+  image: /images/wishlist/spatulas.jpg
